Bug 911482 - Perform audio downmix inside AudioStream class. r=rillian