content/media/MediaDecoderStateMachine.cpp
@@ -1278,6 +1278,8 @@ uint32_t MediaDecoderStateMachine::PlayFromAudioQueue(uint64_t aFrameOffset,
   mAudioStream->Write(audio->mAudioData,
                       audio->mFrames);
 
+  aChannels = mAudioStream->GetOutChannels();
+
   StartAudioStreamPlaybackIfNeeded(mAudioStream);
 
   offset = audio->mOffset;
